fix alignment issues

--- a/packages/dialtone-vue2/recipes/leftbar/style/leftbar_row.less
+++ b/packages/dialtone-vue2/recipes/leftbar/style/leftbar_row.less
@@ -244,6 +244,17 @@
   &__label {
     flex: 0 1;
     min-width: 0;
+
+    .dt-leftbar-row__status {
+      display: flex;
+      gap: var(--dt-space-200);
+    }
+
+    .d-emoji-text-wrapper {
+      flex-wrap: nowrap;
+      gap: var(--dt-space-200);
+      min-width: 0;
+    }
   }
 
   &__omega {
@@ -316,28 +327,18 @@
   //  </div>
   //
   &:deep(&__description) {
-    display: block;
     color: var(--leftbar-row-description-color-foreground);
     font-weight: var(--leftbar-row-description-font-weight);
     font-size: var(--leftbar-row-description-font-size);
     line-height: var(--leftbar-row-description-line-height);
-
-    .d-emoji-text-wrapper__container {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
   }
 
   &:deep(&__status) {
-    display: block;
     padding-bottom: var(--dt-space-100);
-    overflow: hidden;
     color: var(--leftbar-row-status-color-foreground);
     font-size: var(--leftbar-row-status-font-size);
     line-height: var(--leftbar-row-status-line-height);
     white-space: nowrap;
-    text-overflow: ellipsis;
   }
 
   &:deep(&__meta-context ~ &__meta-custom:not(:empty)::before) {
